8173849: Fix use of java.util.Base64 in test cases
Use sun.misc.BASE64Decoder in DHEKeySizing test case

Reviewed-by: omajid